infra/backend/sqs-celery-worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mefit-production-sqs-celery-worker
  namespace: mefit-backend-production
  labels:
    app: mefit-production-sqs-celery-worker
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: mefit-production-sqs-celery-worker
  template:
    metadata:
      labels:
        app: mefit-production-sqs-celery-worker
    spec:
      imagePullSecrets:
      - name: mefit-production-dockerhub
      containers:
      - name: sqs-celery-worker
        image: teammefit/mefit-backend:production
        imagePullPolicy: Always
        command: [ "celery" ]
        args: [ "-A", "config.celery_sqs", "worker", "-Q", "mefit-video-step-complete", "-l", "INFO", "--concurrency", "2", "--without-heartbeat", "--without-mingle", "--without-gossip" ]
        resources:
          requests:
            cpu: 100m
            memory: 192Mi
          limits:
            cpu: 300m
            memory: 384Mi
