infra/backend/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mefit-production-api
  namespace: mefit-backend-production
spec:
  selector:
    app: mefit-production-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
